<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffee"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <include
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/grean"
            />

    <!-- dividers & structure -->
    <View
        android:id="@+id/divider_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/logo"
        android:background="@color/blue"/>

    <TextView
        android:id="@+id/text_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode"
        android:textSize="40sp"
        android:textColor="@color/blue_dark"
        android:layout_marginLeft="25dp"
        android:layout_below="@id/divider_1"/>
    <Switch
        android:id="@+id/switch_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/offline"
        android:textOn="@string/online"
        android:checked="true"
        android:switchTextAppearance="@drawable/switch_text_selector"
        android:textColor="@drawable/switch_text_selector"
        android:track="@drawable/track_drawable"
        android:thumb="@drawable/thumb_selector"
        android:layout_below="@+id/text_mode"
        android:layout_marginLeft="10dp"/>


    <View
        android:id="@+id/divider_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/switch_mode"
        android:layout_marginTop="5dp"
        android:background="@color/blue"/>

    <TextView
        android:id="@+id/text_test"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:layout_below="@id/divider_2"
        android:layout_marginLeft="25dp"
        android:gravity="center"
        android:text="@string/test"
        android:textSize="40sp"
        android:textColor="@color/blue_dark"/>

    <View
        android:id="@+id/divider_3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/text_test"
        android:background="@color/blue"/>

    <TextView
        android:id="@+id/text_calibrate"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:layout_below="@id/divider_3"
        android:layout_marginLeft="25dp"
        android:gravity="center"
        android:text="@string/calibration"
        android:textSize="40sp"
        android:textColor="@color/blue_dark"/>
    <View
        android:id="@+id/divider_4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/text_calibrate"
        android:background="@color/blue"/>


    <View
        android:id="@+id/divider_vertical"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_below="@id/divider_1"
        android:layout_above="@id/divider_4"
        android:layout_toRightOf="@id/switch_mode"
        android:layout_marginLeft="10dp"
        android:background="@color/blue"/>

    <!-- status part -->
    <TextView
        android:id="@+id/text_status"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="40sp"
        android:textColor="@color/blue_dark"
        android:layout_below="@id/divider_1"
        android:layout_toRightOf="@+id/divider_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/text_next_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_time"
        android:textSize="30sp"
        android:textColor="@color/blue_dark"
        android:layout_below="@id/divider_1"
        android:layout_toRightOf="@id/text_status"

        android:layout_marginTop="35dp"/>



    <!-- test part-->
    <TextView
        android:id="@+id/text_loop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loop_test"
        android:textSize="30sp"
        android:textColor="@color/blue_dark"
        android:layout_below="@id/divider_2"
        android:layout_toRightOf="@id/divider_vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"/>
    <Switch
        android:id="@+id/switch_loop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:switchTextAppearance="@drawable/switch_text_selector"
        android:textColor="@drawable/switch_text_selector"
        android:track="@drawable/track_drawable"
        android:thumb="@drawable/thumb_selector"
        android:layout_toRightOf="@id/text_loop"
        android:layout_alignBaseline="@id/text_loop"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/text_gap_time"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/gray_light"
        android:text="@string/gap_time"
        android:textSize="30sp"
        android:textColor="@color/blue_dark"
        android:layout_below="@id/divider_2"
        android:layout_toRightOf="@id/switch_loop"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/text_scheduled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scheduled_time"
        android:textSize="30sp"
        android:textColor="@color/blue_dark"
        android:layout_above="@id/divider_3"
        android:layout_toRightOf="@id/divider_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"/>

    <Switch
        android:id="@+id/switch_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:switchTextAppearance="@drawable/switch_text_selector"
        android:textColor="@drawable/switch_text_selector"
        android:track="@drawable/track_drawable"
        android:thumb="@drawable/thumb_selector"
        android:layout_toRightOf="@id/text_loop"
        android:layout_alignBaseline="@id/text_scheduled"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/text_scd_time"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@color/gray_light"
        android:text="dingshi"
        android:textSize="30sp"
        android:textColor="@color/blue_dark"
        android:layout_toRightOf="@id/switch_schedule"
        android:layout_marginLeft="15dp"
        android:layout_alignBaseline="@id/switch_schedule"/>

    <Button
        android:id="@+id/btn_start_test"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="33dp"
        android:background="@drawable/bt_selector"
        android:text="@string/immediate_test"
        android:textColor="@drawable/text_selector"
        android:textSize="30sp"
        android:layout_below="@id/divider_2"
        android:layout_alignParentRight="true"
        />


    <!-- calibrate part-->
    <TextView
        android:id="@+id/text_low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/low_calibration"
        android:textSize="30sp"
        android:textColor="@color/blue_dark"

        android:layout_below="@id/divider_3"
        android:layout_toRightOf="@id/divider_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        />
    <EditText
        android:id="@+id/edit_low"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:gravity="center_horizontal|bottom"
        android:text="0"
        android:textSize="30sp"
        android:textColor="@color/blue_dark"
        android:background="@color/gray_light"
        android:layout_toRightOf="@id/text_low"
        android:layout_alignBottom="@id/text_low"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit"
        android:textSize="30sp"
        android:textColor="@color/blue_dark"
        android:layout_toRightOf="@id/edit_low"
        android:layout_alignBottom="@id/edit_low"/>

    <TextView
        android:id="@+id/text_high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_calibration"
        android:textSize="30sp"
        android:textColor="@color/blue_dark"
        android:layout_below="@id/text_low"
        android:layout_toRightOf="@id/divider_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/edit_high"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:gravity="center_horizontal|bottom"
        android:text="0"
        android:textSize="30sp"
        android:textColor="@color/blue_dark"
        android:background="@color/gray_light"
        android:layout_toRightOf="@id/text_high"
        android:layout_alignBottom="@id/text_high"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit"
        android:textSize="30sp"
        android:textColor="@color/blue_dark"
        android:layout_toRightOf="@id/edit_high"
        android:layout_alignBottom="@id/edit_high"/>

    <Button
        android:id="@+id/btn_both_cal"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="33dp"
        android:background="@drawable/bt_selector"
        android:text="@string/both_calibration"
        android:textColor="@drawable/text_selector"
        android:textSize="30sp"
        android:layout_below="@id/divider_3"
        android:layout_alignParentRight="true"
        />
    <Button
        android:id="@+id/btn_low_cal"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="29dp"
        android:background="@drawable/bt_selector"
        android:text="@string/low_calibration"
        android:textColor="@drawable/text_selector"
        android:textSize="30sp"
        android:layout_below="@id/divider_3"
        android:layout_toLeftOf="@id/btn_both_cal"
        />
    <Button
        android:id="@+id/btn_high_cal"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="29dp"
        android:background="@drawable/bt_selector"
        android:text="@string/high_calibration"
        android:textColor="@drawable/text_selector"
        android:textSize="30sp"
        android:layout_below="@id/btn_low_cal"
        android:layout_toLeftOf="@id/btn_both_cal"
        />





    <!--last four btn part-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@id/divider_4"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="6dp">
        <Button
            android:id="@+id/btn_standard_test"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/bt_selector"
            android:text="@string/standard_test"
            android:textColor="@drawable/text_selector"
            android:textSize="30sp"
            />
        <Button
            android:id="@+id/btn_initialize"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bt_selector"
            android:text="@string/initialize"
            android:textColor="@drawable/text_selector"
            android:textSize="30sp"

            />
        <Button
            android:id="@+id/btn_clean"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bt_selector"
            android:text="@string/clean"
            android:textColor="@drawable/text_selector"
            android:textSize="30sp"
            />
        <Button
            android:id="@+id/btn_stop"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bt_selector"
            android:text="@string/stop"
            android:textColor="@drawable/text_selector"
            android:textSize="30sp"
            />
    </LinearLayout>




</RelativeLayout>
