<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffee"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <include
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/grean"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">
        <TextView
            android:text="@string/device_info"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_margin="20dp"/>
        <TextView
            android:id="@+id/device_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Grean xxx"
            android:textColor="@color/blue"
            android:textSize="35sp"
            android:layout_margin="20dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">
        <TextView
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/device_code"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_margin="20dp"/>
        <TextView
            android:id="@+id/device_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_code"
            android:textColor="@color/blue"
            android:textSize="35sp"
            android:layout_margin="20dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">
        <TextView
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/build_version"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_margin="20dp"/>
        <TextView
            android:id="@+id/build_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/build_version"
            android:textColor="@color/blue"
            android:textSize="35sp"
            android:layout_margin="20dp"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_gravity="right"
            android:textSize="20sp"
            android:text="@string/tel"/>
    </LinearLayout>


</LinearLayout>
